# althea

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Vagrantfile  rustfmt.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  labeler.yml  release.yml
compiler/alc/: Cargo.toml
compiler/alc/src/: main.rs
compiler/alc_ast_lowering/: Cargo.toml
compiler/alc_ast_lowering/src/: idx.rs  idx_vec.rs  ir.rs  lib.rs  lowering.rs  lowering_ctx.rs  ty.rs  ty_lowering.rs
compiler/alc_codegen_llvm/: Cargo.toml
compiler/alc_codegen_llvm/src/: ctx.rs  lib.rs
compiler/alc_command_option/: Cargo.toml
compiler/alc_command_option/src/: lib.rs
compiler/alc_diagnostic/: Cargo.toml
compiler/alc_diagnostic/src/: lib.rs
compiler/alc_driver/: Cargo.toml
compiler/alc_driver/src/: lib.rs
compiler/alc_garbage_collector/: Cargo.toml
compiler/alc_garbage_collector/src/: lib.rs
compiler/alc_parser/: Cargo.toml
compiler/alc_parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
compiler/alc_type_checker/: Cargo.toml
compiler/alc_type_checker/src/: lib.rs
doc/: BENCHMARK.md  FAQ.md  GC.md  OTHER_LANGUAGE_COMPARISON.md
doc/reference/: simple_uaf.cpp
doc/reference/benchmark/: .gitignore  Makefile
doc/reference/benchmark-server/: .gitignore  README.md
doc/reference/benchmark-server-althea/: README.md  Vagrantfile  docker-compose.yaml
doc/reference/benchmark-server-althea/app/: Dockerfile  c.dockerfile  main.c  main.ll  sample.c  sample.ll
doc/reference/benchmark-server-althea/infra/: local.tf  provider.tf
doc/reference/benchmark-server-althea/systemd/: benchmark-server-althea.service
doc/reference/benchmark-server-althea/vagrant/: Vagrantfile
doc/reference/benchmark-server-go/: .gitignore  README.md  Vagrantfile  docker-compose.yaml
doc/reference/benchmark-server-go/app/: Dockerfile  golang19.dockerfile  main.go
doc/reference/benchmark-server-go/cli/: Dockerfile
doc/reference/benchmark-server-go/infra/: .terraform.lock.hcl  iam.tf  local.tf  network.tf
doc/reference/benchmark-server-go/systemd/: benchmark-server.service  benchmark-server.socket
doc/reference/benchmark-server/app/: go.mod  main.go
doc/reference/benchmark/althea/: Dockerfile  (+1 more)
example/: a.al  access_struct_field.al  access_struct_field.alt  arg_count_mismatch.al  array.alt  call.al  demo.al  enum.alt  fib.al  fib.alt  for.al  func_call.alt  gc.al  gc.alt  gc_check.al  http_server.alt  http_server_experiment.alt  if.al  if.alt  match_struct.al  match_struct.alt  mem_check.al  new_http_server.alt  old_http_server.alt  println.al  println.alt  reserved_GC_malloc.al  rust_cmp.alt  struct.al  struct_order.alt  type_mismatch.al  zero.al  zero.alt  zig_cmp.alt
example/failure/: arg_count_mismatch.alt  semi.alt  type_mismatch.al
example/gc_check/: arg_assign.alt  assign.alt  assign_literal_to_variable.alt  assign_variable_to_variable.alt  pass_literal_to_function_argument.alt  pass_variable_to_function_argument.alt  simple.alt  struct_in_struct.alt
example/server/: README.md
example/server/app/: Dockerfile  main.alt
example/server/infra/: local.tf  network.tf  output.tf  server.tf
tool/: Dockerfile
(+17 files in other folders)
