[package]
name = "alc_codegen_llvm"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
alc_diagnostic = { path = "../alc_diagnostic" }
alc_command_option = { path = "../alc_command_option" }
alc_ast_lowering = { path = "../alc_ast_lowering" }
