[package]
name = "alc_codegen_llvm"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "845270c99ee6268385b79b2e178a872ab4b1b1a8", features = ["llvm13-0"] }
alc_diagnostic = { path = "../alc_diagnostic" }
alc_command_option = { path = "../alc_command_option" }
alc_ast_lowering = { path = "../alc_ast_lowering" }
