[package]
name = "alc_garbage_collector"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
alc_diagnostic = { path = "../alc_diagnostic" }
alc_ast_lowering = { path = "../alc_ast_lowering" }
alc_command_option = { path = "../alc_command_option" }
